fix next block spacing for 2 pages

--- a/blocks/next/next.css
+++ b/blocks/next/next.css
@@ -36,6 +36,7 @@
   border: 0;
   background-color: unset;
   padding: 0;
+  padding-top: 11px;
 }
 
 .next.block a::after {
